docs: correct the virtual-thread pinning rationale and state the Java 25 floor
The rationale given for the move named a mechanism that does not hold for
the driver the image template configures: pgjdbc has guarded its protocol
exchange with a ReentrantLock rather than a monitor since 42.5.1, so it
never pinned a carrier. The measured PostgreSQL result stands; what JEP 491
removes is carrier pinning whenever a virtual thread blocks on a monitor,
wherever that monitor lives, so the docs say that instead.

Two further corrections in the same section. Object.wait no longer pins on
25 -- JEP 491 covers it, verified against both runtimes -- and the daemon
does not drive every saga on a virtual thread: with sync.timeout_millis at
its default of 0, a synchronous POST /sagas runs the saga to a terminal
state on the calling Jetty worker.

The operator-facing text is present tense throughout. There is no release
on this line, so "used to be capped by pinning" described an internal state
no reader ever ran; what is worth saying is that sagas run on virtual
threads, so in-flight store operations are bounded by the configured
ScalarDB storage rather than by a server-side thread pool. Sizing that is
ScalarDB's to document, so no keys or defaults are repeated here.

Also: RELEASING.md now states core's Java 25 floor the way the client SDK
row states Java 8; the CLAUDE.md warning baseline moves from 4 to 9, which
is what the build has emitted since the ExceptionRegistry NullAway findings
landed, so the gate can be applied as written; the ScopedValue note records
why the migration is deferred rather than why it was impossible, since JEP
506 removed the blocker; and the entrypoint comment is rewrapped, with the
JAVA_OPTS claim narrowed to the two sizing flags, as native access cannot
be withdrawn that way.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DnSCcCKRGkAgbZwFJXzPmV